[gd_scene load_steps=13 format=3 uid="uid://bntugelqqirvx"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_6523k"]
[ext_resource type="Texture2D" uid="uid://bppn4wuq11bg7" path="res://Textures/Player/Goth Girl-Sheet fin-Sheet.png" id="2_7sjon"]
[ext_resource type="Script" path="res://Player/dynamic_cam.gd" id="3_o1ukv"]
[ext_resource type="PackedScene" uid="uid://b1abs8eqyt7ae" path="res://Utility/hurt_box.tscn" id="3_wsr3l"]
[ext_resource type="PackedScene" uid="uid://dhj2f2wwi330i" path="res://Utility/weapon.tscn" id="4_qt33n"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ykqls"]
radius = 6.0
height = 28.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5de4o"]
size = Vector2(15.5, 23)

[sub_resource type="Animation" id="Animation_mpx17"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_lsloh"]
resource_name = "walk"
length = 0.5
loop_mode = 1
step = 0.083
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.083, 0.166, 0.249, 0.332, 0.415),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oy2qa"]
_data = {
"RESET": SubResource("Animation_mpx17"),
"walk": SubResource("Animation_lsloh")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_1lo27"]
blend_mode = 1

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_bk4dp"]
polygon = PackedVector2Array(-4, -16, 3, -16, 3, -15, 4, -15, 4, -9, 3, -9, 3, -7, 4, -7, 4, -6, 5, -6, 5, -2, 4, -2, 4, 0, 3, 0, 3, 1, 5, 1, 5, 2, 6, 2, 6, 3, 7, 3, 7, 6, 6, 6, 6, 7, 5, 7, 5, 8, 4, 8, 4, 11, 5, 11, 5, 16, 1, 16, 1, 8, 0, 8, 0, 11, -1, 11, -1, 16, -5, 16, -5, 11, -4, 11, -4, 8, -5, 8, -5, 7, -6, 7, -6, 6, -7, 6, -7, 3, -6, 3, -6, 2, -5, 2, -5, 1, -4, 1, -4, 0, -5, 0, -5, -7, -6, -7, -6, -13, -5, -13, -5, -15, -4, -15)

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_6523k")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_7sjon")
hframes = 6

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Dash_Cooldown" type="Timer" parent="."]
wait_time = 3.0

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 2.0
script = ExtResource("3_o1ukv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(2, 1)
shape = SubResource("CapsuleShape2D_ykqls")

[node name="WalkTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="HurtBox" parent="." instance=ExtResource("3_wsr3l")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(2, 1)
shape = SubResource("RectangleShape2D_5de4o")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oy2qa")
}

[node name="Weapon" parent="." instance=ExtResource("4_qt33n")]
position = Vector2(2, -3)

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
material = SubResource("CanvasItemMaterial_1lo27")
occluder = SubResource("OccluderPolygon2D_bk4dp")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Dash_Cooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]

[editable path="HurtBox"]
